# logstream-portal

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  onboarding.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/aws/: access_bundle.py  access_roles.py
backend/app/catalog/: cache.py  service.py  sync.py  uc_client.py
backend/app/cribl/: admin.py  discovery.py  objects.py
backend/app/routes/: approvals.py  catalog.py  deps.py  session.py  streams.py
backend/app/streams/: peek.py  provisioner.py  service.py
backend/tests/: conftest.py  test_access_bundle.py  test_access_roles.py  test_api.py  test_catalog_service.py  test_catalog_sync.py  test_cribl_admin.py  test_cribl_discovery.py  test_cribl_objects.py  test_db.py  test_discovered_sources.py  test_merge_discovered.py  test_peek.py  test_provisioner.py  test_seed_cribl.py  test_smoke.py  test_stream_service.py  test_uc_client.py
backend/tests/aws_golden/: bundle_kinesis.json
backend/tests/cribl_golden/: dest_kinesis.json  dest_sqs.json  route_two_members.json
cribl/: README.md  seed_spec.json
docs/superpowers/plans/: 2026-06-11-logstream-portal.md  2026-06-12-cribl-aws-portal.md  (+1 more)
fixtures/: catalog_snapshot.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
infra/: .gitignore  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
scripts/: build_push_portal.sh  infra_teardown.sh  seed_catalog.py  seed_cribl.py
(+31 files in other folders)
